Closed Bug 150041 Opened 23 years ago Closed 23 years ago

Jpegs do not render correctly

Categories

(Core :: Graphics: ImageLib, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: ajhoskinguk, Assigned: tor)

Details

(Whiteboard: Flat screen,)

Attachments

(5 files)

Well I cant describe it, Please look at the Attachment
Build ID ? Hmm, no attachent here :-)
Summary: Jpegs do not render correctly → Jpegs do not render correctly
Attached image Look here and see.
I have Used IE as the other example But I could of used Opera.
This has been the same in all the builds i've used.
hmm, where is the difference ?
Look at the edges of an object in the image. It's aliasing, kinda. More like a half downloaded image that hasn't completed it's rendering. Example: Netscape Communicator load a large graphic and it will get better quality in passes.
Yeah the left image appears half res. Reporter, where's the original jpeg?
Assignee: Matti → pavlov
Component: Browser-General → ImageLib
QA Contact: imajes-qa → tpreston
Original jpeg appears to be here: http://ajuk.150m.com/images/ajuk.jpg Gqview shows it smooth to the pixel, in Mozilla it's about half resolution (looks like 2*1 px blocks). Linux trunk cvs 20020607.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 98 → All
So are we all agreed that s a bug and it needs fixing? Or is this worksforme? I will have a look on anther comp as soon as I get a chance.
Good eye Alex. I also see "the jaggies" with Mozilla Build 2002061308 ( and NS 4.7 ) Win 95 16bit colors. IE 5.5 does NOT display any jaggies. ( the image is smooth )
This has been visited before; it's not that JPEGs don't render correctly, they do, but rather that they don't look as nice close up as in IE, because IE uses some anti-aliasing technique to make images look better.
No I made that image IE has it right I should know I made it
FWIW, I downloaded the image from the location in comment #7 and opened it in Mozilla 1.0 and IE 5.5 SP2, both under win2k. I can see the difference. Then, seperately, I downloaded the image to two different files and opened up them both up in my image viewer, Firehand Ember which I trust very much. The two files are identical to each other in Ember, and identical to how it appears in IE, but Mozilla clearly is different and has that "one more pass needed" look to it, especially around the right side/bottom bend of the U and J. Conclusion: Mozilla is not rendering this image correctly. Addendum: Netscape Communicator 4.7 displays it the same as Mozilla. Opera displays it as it appears in Ember and IE.
Taking bug.
Assignee: pavlov → tor
Yes, I performed a similar task to what Darin did with PSP and see a similar result now. tor, does this actually match the output, or simulate it?
It looks the same as the attachment and do_fancy_upsampling is actually the default setting for libjpeg, so I assume that's the same settin that MSIE/Opera are using.
Attached image Original Image
This is the Original JPeg ------------------------------- Insert Clever Comment Here
what is the performance cost (decoding time) by of changing this option?
For a 2726x1729 single pass jpeg (hst_crab_nebula.jpg, if you happen to have a redhat system with the desktop-backgrounds package installed), user time for djpeg increases from 0.55 to 0.83 seconds on a p3-500. The amount of time spent data copying and display inside mozilla is probably much more. Anyway, we shouldn't be cutting corners in quality for performance. If anyone mentions prefing this I'm going to sic mpt on them...
Comment on attachment 88805 [details] [diff] [review] patch to use more accurate upsampling - now matches MSIE output r=pavlov
Attachment #88805 - Flags: review+
Comment on attachment 88805 [details] [diff] [review] patch to use more accurate upsampling - now matches MSIE output sr=blizzard
Attachment #88805 - Flags: superreview+
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Is a bug fixed llwhen there a working patch to fix it or is it fixed when Mozilla includes the patch in one of the nightly builds?
Neither - it's fixed when a patch to fix the problem has been applied to main source repository.
Attached image red/green test image.
This image should make the before/after difference quite clear for verification. Pre-patch should be chunky, post-patch should simply be blurry. The white sworls should be unaffected.
This image has its chroma channels sampled at full-resolution and should hence be identical (and sharp) before and after the patch, or regression has occurred.
I may sound dumb but how do I use the Patch?
Alex, Normally you don't need to use a patch. Unless you are testing the patch and building yourself mozilla from sources. Once the patch is "checked in" ( see Comment #22 )you wait for the next nightly build or stable release. New "nightly builds" appears every few hours and can be donloaded from: http://ftp.mozilla.org/pub/mozilla/nightly/latest/ But these build are for testing purposes. They could be "unstable". However most of the time they are good enough for daily use.
Will this be im Mozilla 1.01?
Yes I see It fixed and I also see it fixed in NN7! Whey.
Status: RESOLVED → VERIFIED
I should note that this bug only shows up allot worse on flat screens But im still seeing it.
Whiteboard: Flat screen,
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: