Bug 150041 - turn on do_fancy_upsampling for higher quality decoding. r=pavlov, sr=blizzard